source/css/maya.css
/* ... */
h1 {
  /*font-family: "Univers39-UltraCondensedThin";
  text-shadow: 2px 2px 4px rgba(0,0,0,1);
  background: url(../../assets/images/theme/underline.png) repeat-x 0px 63px;
  font-weight: lighter;
  font-size: 54px;
  letter-spacing: .04em;
  text-transform: uppercase;
  color: rgb(128, 161, 182);*/
  float: left;
  padding-bottom: 20px;
  margin: 0;
}
.level-3 #wrapper h1 {
  width: 400px;
  /*background-position: 0 100px;
  line-height: normal;*/
  margin: 10px 0 20px;
}

/**
 * Replace text with images.
 * Needed on exhibit PCs running Windows.
 */
.text-replacement {
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}
#wrapper h1.text-replacement {
  width: 695px;
  height: 61px;
  background: url(../../assets/images/text/headline-eng.png) no-repeat;
}
body.spanish #wrapper h1.text-replacement {
  width: 884px;
  height: 77px;
  background: url(../../assets/images/text/headline-esp.png) no-repeat;
  padding-bottom: 14px;
}
.help_overlay h1 {
  height: 46px;
}
body.spanish h1#splash-title {
  background: url(../../assets/images/text/dialog-1-esp.png) no-repeat;
  width: 492px;
  height: 93px;
}
h1#splash-title {
  background: url(../../assets/images/text/dialog-1-eng.png) no-repeat;
  width: 451px;
}
body.spanish h1#level-2 {
  background: url(../../assets/images/text/dialog-2-esp.png) no-repeat;
  width: 76px;
}
h1#level-2 {
  background: url(../../assets/images/text/dialog-2-eng.png) no-repeat;
  width: 78px;
}
body.spanish h1#level-3 {
  background: url(../../assets/images/text/dialog-3-esp.png) no-repeat;
  width: 75px;
}
h1#level-3 {
  background: url(../../assets/images/text/dialog-3-eng.png) no-repeat;
  width: 77px;
}
body.spanish h1#win-title {
  background: url(../../assets/images/text/dialog-4-esp.png) no-repeat;
  width: 114px;
  height: 55px;
}
h1#win-title {
  background: url(../../assets/images/text/dialog-4-eng.png) no-repeat;
  width: 115px;
}

/* Header */
div#language_bar {
  color: rgba(255,255,255,.5);
  height: 34px;
  padding-top: 16px;
  font-family: "Univers 75 Black";
  background: url(../../assets/images/theme/bg_header.png) repeat-x;
  text-transform: uppercase;
  font-size: 12px;
}
div#language_bar span#en {
  margin-right: 56px;
}
div#language_bar span#es {
  margin-right: 100px;
}
span.selected {
  color: rgb(255,255,255);
}
span#en,
span#es,
span#restart {
  float: right;
}

/* Layout */
div#wrapper {
  background: none;
  width: auto;
  padding: 10px 60px 0;
  margin: 0 auto;
}
#column-left {
  clear: both;
  width: 450px;
  float: left;
}
#column-middle {
  background: #262626;
  margin: 0 60px 0 20px;
  width: 460px;
  float: left;
  padding-top: 30px;
}
.level-2 #column-middle, .level-3 #column-middle {
  padding-top: 22px;
}
.level-3 #column-middle {
  position: relative;
  top: -115px;
}
body.spanish.level-3 #column-middle {
  top: -130px;
}
#column-right {
  float: right;
  width: 250px;
}
.level-3 #column-right {
  position: relative;
  top: -70px;
}
footer {
  position: fixed;
  bottom: 0;
  clear: both;
  width: 1211px; /* 1366 - 85 - 70 = 1211 */
  height: 55px;
  padding: 0 70px 0 85px;
}

/* Initially hidden content */
body.level-3 .level-1 {
  display: none;
}
body.level-3 .level-1.level-3 {
  display: block;
}
#facts p,
#zero_hint {
  display: none;
}

/* Left column */
#instructions p {
  font-size: 18px;
  width: 400px;
}
#column-left #instructions {
  margin: 10px 0 -20px;
  min-height: 75px;
}
body.level-1 #instructions {
  min-height: 50px;
}
#instructions p.level-1 {
  display: none;
}
#instructions p {
  margin: 0;
}
div#glyphs {
  margin: 0 auto;
  text-align: center;
}
#glyphs ul {
  clear: both;
  padding: 0;
  margin: 0 0 50px 0;
}
#glyphs ul li {
  float: left;
  list-style-type: none;
  margin: 5px 20px 8px 0;
}
#glyphs ul li.new-row {
  clear: both;
}
#glyphs li img {
  box-shadow: 0 0 7px #000;
  cursor: pointer;
  z-index: 99;
}

/* Middle column */
#column-middle {
  font-family: "Univers 75 Black";
}
body.level-1 .bucket {
  position: relative;
  z-index: 0;
}
.bucket {
  clear: both;
  float: left;
  margin-bottom: 12px;
}
.bucket .multiplier {
  margin-right: 28px;
  position: relative;
  top: 20px;
  text-align: right;
  width: 140px;
  font-size: 28px;
}
.multiplier, .equals, .bucketSum {
  float: left;
  color: #c0bfbf;
}
.equals {
  position: relative;
  top: 17px;
  left: 20px;
  margin-right: 8px;
  font-size: 32px;
}
div.bucketSum {
  float: left;
  position: relative;
  top: 10px;
  text-align: right;
  width: 50px;
  font-family: "Univers UltraCondensed";
  font-size: 38px;
}
div.plus {
  float: right;
  font-size: 24px;
  position: relative;
  clear: left;
  margin-top: -30px;
}
body.level-2 div.bucketSum {
  width: 100px;
}
body.level-2 div.plus {
  left: -74px;
}
body.level-3 div.bucketSum {
  width: 120px;
}
body.level-3 .plus {
  left: -55px;
}
.bucket div.dropzone {
  float: left;
  border: 5px solid rgb(0, 90, 132);
  border-radius: 8px;
  box-shadow: inset 0 0 10px #000;
  background: rgb(191,191,191);
  color: #777;
  height: 85px;
  width: 85px;
}
body.level-2 .bucket div.dropzone,
body.level-3 .bucket div.dropzone {
  height: 75px;
  width: 75px;
}
.bucket div.dropzone.full {
  opacity: .8;
}
div#live_sum {
  clear: both;
}
#live_sum p {
  /*font-family: "Univers UltraCondensed";
  text-transform: uppercase;
  letter-spacing: .12em;
  background: url(../../assets/images/theme/underline.png) repeat-x 0 10px;*/
  float: right;
  background: url(../../assets/images/text/current-total-eng.png) no-repeat;
  width: 112px;
  height: 39px;
  margin: 0 40px 0 0;
  padding: 8px 0px 0 0;
}
body.spanish #live_sum p {
  background: url(../../assets/images/text/current-total-esp.png) no-repeat;
}
div#total {
  font-size: 44px;
  clear: both;
  text-align: right;
  margin-right: 50px;
}
div#status {
  /*background: url(../../assets/images/theme/underline.png) repeat-x 0 26px;*/
  width: 400px;
  margin: 0 auto;
  clear: both;
}
/* ... */

